fixed header gap issue

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -214,7 +215,7 @@ header.masthead #women {
   padding: 0 5px 10px 10px;
   position: absolute;
   bottom: -50px;
-  right: -10px;
+  right: -5px;
   width: 65%;
 }
 
