--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -29,7 +29,7 @@ header.masthead {
         padding: 0 5px 10px 10px;
         position: absolute;
         bottom: -50px;
-        right: -10px;
+        right: -5px;
         width: 65%;
     }
     @media (min-width: 992px) {
